fixed overlapping spy-ware

--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body {
 .gamescreen {
     color: lime;
     background-color: black;
-    font-size: 16px;
+    font-size: 14px;
     height: auto;
 }
 .startscreen {
